--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,8 @@
-<h2>Sign up</h2>
+
+<p>
+  <%= link_to "Sign In With Google", user_omniauth_authorize_path(:google_oauth2) %>
+</p>
+  <p> or create an account </p>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -17,5 +21,3 @@
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
-
-<%= render "devise/shared/links" %>
