button and disqus

--- a/app/views/synths/new.html.erb
+++ b/app/views/synths/new.html.erb
@@ -12,6 +12,6 @@
   <%= f.label :modification %>
   <%= f.text_field :modification %>
 
-  <%= f.submit %>
+  <%= f.submit "Create Synth", class:"button" %>
 
   <% end %>
