--- a/app/views/synths/show.html.erb
+++ b/app/views/synths/show.html.erb
@@ -1,10 +1,3 @@
 <%= @synth.model %>
 
-<html>
-<head>
-  <title>Synthfinder</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => false %>
-  <%= javascript_include_tag "vendor/modernizr" %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
+<%= render 'shared/disqus' %>
